--- a/src/variables/_navbar.var.scss
+++ b/src/variables/_navbar.var.scss
@@ -45,6 +45,7 @@
   --navbar-label-hover-color: var(--secondary);
 
   --navbar-first-list-span-font-size: 2rem;
+  --navbar-first-list-span-text-align: center;
 }
 
 @media (min-width: $breakpoint-sm) {
